[package]

name = "piston3d-cam"
version = "0.0.4"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "eddyb"
]
keywords = ["cam", "3d", "perspective", "first-person"]
description = "A library for 3D camera and navigation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/cam.git"
homepage = "https://github.com/pistondevelopers/cam"

[lib]

name = "cam"
path = "src/lib.rs"

[dependencies]
bitflags = "*"

[dependencies.pistoncore-event]
git = "https://github.com/pistondevelopers/event"
#version = "0.0.5"

[dependencies.vecmath]
git = "https://github.com/pistondevelopers/vecmath"
#version = "0.0.3"

[dependencies.pistoncore-input]
git = "https://github.com/PistonDevelopers/input"
#version = "0.0.5"

[dependencies.quaternion]
git = "https://github.com/PistonDevelopers/quaternion.git"
#version = "0.0.2"
