[package]

name = "piston3d-cam"
version = "0.0.7"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "eddyb"
]
keywords = ["cam", "3d", "perspective", "first-person", "piston"]
description = "A library for 3D camera and navigation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/cam.git"
homepage = "https://github.com/pistondevelopers/cam"

[lib]

name = "cam"
path = "src/lib.rs"

[dependencies.vecmath]
git = "https://github.com/pistondevelopers/vecmath"
#version = "0.0.22"

[dependencies.quaternion]
git = "https://github.com/PistonDevelopers/quaternion.git"
#version = "0.0.6"
